refactor: Constant 클래스 추가
입출력 및 에러 메시지를 Constant 변수에 담아 분리