@@ -2,21 +2,23 @@ package racingcar.controller;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 import racingcar.model.Car;
 import racingcar.service.Game;
+import racingcar.constant.Constant;
 
 public class GameController {
     private Game game = new Game();
 
     public void setUp(String participants){
-        game.setUp(Arrays.stream(participants.split(",")).map(str->str.trim())
-                .collect(Collectors.toList()));
+        game.setUp(Arrays
+                .stream(participants.split(","))
+                .map(String::trim)
+                .toList());
     }
 
     public void startGame(Integer numberOfAttempt){
         System.out.println();
-        System.out.println("실행 결과");
+        System.out.println(Constant.OUTPUT_MESSAGE);
         for(int i = 0; i<numberOfAttempt; i++){
             game.moveForwardAttemptCars();
             printCars();
@@ -41,7 +43,7 @@ public class GameController {
     public void printFinalists(){
         List<String> finalists = game.getFinalists();
 
-        System.out.print("최종 우승자 : ");
+        System.out.print(Constant.OUTPUT_FINALIST_MESSAGE);
         for(int i = 0; i<finalists.size()-1; i++){
             System.out.print(finalists.get(i)+", ");
         }
