@@ -4,35 +4,33 @@ import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 import racingcar.model.Car;
 import camp.nextstep.edu.missionutils.Randoms;
+import racingcar.constant.Constant;
 
 public class Game {
     private List<Car> cars = new ArrayList<>();
-    private final static int MAX_LENGTH = 5;
-    private final static int FORWARD_THRESHOLD = 4;
 
-    private boolean inputValidation(String name){
-        return name.length() <= MAX_LENGTH;
+    private boolean isValid(String name){
+        return name.length() <= Constant.MAX_NAME_LENGTH;
     }
 
     public void setUp(List<String> names){
         for(String name: names){
-            if(!inputValidation(name)){
-                throw new IllegalArgumentException("Exceeds maximum input length " + MAX_LENGTH);
+            if(!isValid(name)){
+                throw new IllegalArgumentException(String.format(Constant.ERROR_CAR_NAME_MESSAGE, Constant.MAX_NAME_LENGTH));
             }
             cars.add(new Car(name));
         }
     }
 
     public boolean moveForwardAttempt(Integer input){
-        return input >= FORWARD_THRESHOLD ;
+        return input >= Constant.FORWARD_THRESHOLD ;
     }
 
     public void moveForwardAttemptCars(){
         for(Car car: cars){
-            if(moveForwardAttempt(Randoms.pickNumberInRange(0,9))){
+            if(moveForwardAttempt(Randoms.pickNumberInRange(Constant.MIN_NUMBER,Constant.MAX_NUMBER))){
                 car.moveForward();
             }
         }
@@ -43,15 +41,19 @@ public class Game {
     }
 
     public Integer getMaxPosition(){
-        return cars.stream().max(Comparator.comparing(Car::getPosition))
-                .orElseThrow(NoSuchElementException::new).getPosition();
+        return cars.stream()
+                .max(Comparator.comparing(Car::getPosition))
+                .orElseThrow(NoSuchElementException::new)
+                .getPosition();
     }
 
     public List<String> getFinalists(){
         int maxPosition = getMaxPosition();
 
         //우승자만 필터링하고 name field만 collect해 반환
-        return cars.stream().filter(car -> maxPosition == car.getPosition())
-                .map(Car::getName).collect(Collectors.toList());
+        return cars.stream()
+                .filter(car -> maxPosition == car.getPosition())
+                .map(Car::getName)
+                .toList();
     }
 }
